# acl-relay-synchronization

./: Cargo.toml  README.md
src/: main.rs
src/cli/: cli.rs  migrate_cmd.rs  mod.rs  run_cmd.rs
src/common/: config.rs  consts.rs  error.rs  logging.rs  mod.rs
src/db/: database.rs  mod.rs
src/db/entities/: last_update.rs  mod.rs  nostr_event.rs  prelude.rs
src/db/migration/: m20241204_062314_create_last_update_table.rs  m20241204_062406_create_nostr_event_table.rs  mod.rs
src/indexdb/: indexdb.rs  mod.rs
src/nostr/: client.rs
src/services/: app.rs
src/waku/: mod.rs  pubsub.rs
templates/: config.yaml
