[package]
name = "nostr_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes"] }
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
nostr-sdk = { version = "0.37.0", features = ["all-nips"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["default", "json"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-async-std" , "runtime-tokio"] }
sea-orm-migration = "1.1.1"
secp256k1 = { version = "0.26.0", features = ["rand", "recovery", "serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
url = "2.5.4"
waku-bindings = "0.6.0"
